--- a/package.json
+++ b/package.json
@@ -1,32 +1,28 @@
 {
   "dependencies": {
     "@salesforce-ux/design-system": "^2.4.5",
-    "@types/node": "^8.5.2",
-    "autoprefixer": "^7.2.3",
+    "@types/node": "^9.3.0",
+    "autoprefixer": "^7.2.4",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "css-loader": "^0.28.7",
-    "form-data": "^2.3.1",
+    "css-loader": "^0.28.8",
+    "postcss-loader": "^2.0.10",
     "pug": "^2.0.0-rc.4",
     "style-loader": "^0.19.1",
     "ts-loader": "^3.2.0",
     "ts-node": "^4.1.0",
     "tslint": "^5.8.0",
-    "tslint-loader": "^3.5.3",
     "typescript": "^2.6.2",
     "url-loader": "^0.6.2",
-    "url-search-params": "^0.10.0",
-    "uuid": "^3.1.0",
-    "vue": "2.5.13",
-    "vue-loader": "^13.6.1",
+    "vue": "^2.5.13",
+    "vue-loader": "^13.7.0",
     "vue-property-decorator": "^6.0.0",
-    "vue-template-compiler": "2.5.13",
+    "vue-template-compiler": "^2.5.13",
     "webpack": "^3.10.0",
     "webpack-build-notifier": "^0.1.21",
-    "webpack-sfdc-deploy-plugin": "^1.1.11",
-    "whatwg-fetch": "^2.0.3"
+    "webpack-sfdc-deploy-plugin": "^1.1.11"
   },
   "license": "MIT",
   "name": "sfdx-lds-vue-typescript",
